Completar licencias SaaS y gestión fiscal VeriFactu (#104)
* feat: completar licencias SaaS y gestión fiscal VeriFactu

* test: completar fixture fiscal de devoluciones